Updated SpringProject3 with UserForm example with View-Controller

--- a/projects/SpringProject3/WebContent/WEB-INF/view/staticPage.html
+++ b/projects/SpringProject3/WebContent/WEB-INF/view/staticPage.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>My cool static page</title>
 </head>
 <body>
 
-	<h1 style="background: rgba(55, 255, 255, 1); padding: 200px;">
+	<h1 style="background: rgba(255, 20, 200, 1); padding: 200px;">
 		Hello my friends, this is a static page created from an HTML file!</h1>
 
 </body>
