--- a/projects/SpringProject3/WebContent/META-INF/resources/styles/userForm.css
+++ b/projects/SpringProject3/WebContent/META-INF/resources/styles/userForm.css
@@ -7,8 +7,8 @@
 	flex-direction: column;
 	font-size: 20px;
 	justify-content: space-between;
-	margin: 50px;
-	padding: 100px 50px;
+	margin: 20px;
+	padding: 0px 50px 50px 50px;
 }
 
 .container__form {
@@ -16,18 +16,19 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding: 30px 0px;
+	padding: 20px 0px;
 	width: 100%;
 }
 
 .container__text {
 	font-size: 25px;
 }
+
 .container__input {
 	border: solid 1px black;
 	border-radius: 20px;
 	height: 25px;
 	padding: 10px;
-	margin: 20px;
+	margin: 10px;
 	width: 40%;
 }
