--- a/projects/SpringProject3/WebContent/META-INF/resources/styles/finishedUserForm.css
+++ b/projects/SpringProject3/WebContent/META-INF/resources/styles/finishedUserForm.css
@@ -1,3 +1,16 @@
+body {
+	align-items: center;
+	background: rgba(55, 255, 255, 1);
+	border: solid 1px black;
+	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin: 50px;
+	padding: 50px 50px;
+	display: flex;
+}
+
 .container {
 	align-items: center;
 	background: rgba(55, 255, 255, 1);
